--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,4 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python,node,virtualenv
 
 data/
+tb_logs/
